--- a/style.css
+++ b/style.css
@@ -13,11 +13,7 @@ body{
     margin:auto;
 
 }
-/* .container > div{
-    padding-left:50px;
-    padding-right:50px;
-} */
-/* header.............................................. */
+/* =========================  Header ============================== */
 .header {
     background-color: #37517e;
     position:sticky;
@@ -28,7 +24,6 @@ body{
     display:flex;
     justify-content:space-between;
     align-items: center;
-
 }
 .header h2{
     font-size: 30px;
@@ -55,6 +50,7 @@ body{
 .header ul a:hover{
     color:#47b2e4;
 }
+/* ======================= first section ==================== */
 .first-section{
     background-color: #37517e;
     padding:50px 0;
@@ -113,7 +109,7 @@ body{
 .first-section .right-bar img{
     width:100%;
 }
-/* clients..................................................... */
+/* ====================== client =========================== */
 
 .clients{
     display:flex;
@@ -129,7 +125,7 @@ body{
     width:60px;
     height:20px;
 }
-/* second............................................................... */
+/* ======================== second section =====================*/
 
 .second-section .container .content{
     display:flex;
@@ -219,14 +215,13 @@ body{
 .second-section .right-bar button:hover span{
  margin-left:5px;
 }
-/* third....................................................... */
+/* ====================== Third section ================== */
 
 .third-section{
     background-color: #f5f6f8;
 }
 .third-section .container{
     display:flex;
-    /* margin:30px 0; */
     padding:40px 0;
 }
 .third-section .left{
@@ -274,12 +269,11 @@ body{
 .third-section .right img{
     width:80%;
 }
-/* forth......................................................... */
+/* ====================== forth section ================== */
 
 .forth-section .container{
     display: flex;
     padding:70px;
-    /* margin:50px 0 ; */
 }
 .forth-section .left{
     width:50%;
@@ -385,10 +379,9 @@ body{
     color:#37517e;
     margin:0;
 }
-/* fifth.......................................................... */
+/* =====================  fifth section ==================== */
 
 .fifth-section {
-    /* margin-top:100px ; */
     background-color: #f5f6f8;
     padding:30px 0;
 }
@@ -465,7 +458,7 @@ color:rgb(100, 99, 99);
     color:rgb(78, 77, 77);
     line-height: 1.5;
 }
-/* sixth........................................................... */
+/* ===================== sixth section =================== */
 
 .sixth-section{
     height:500px;
@@ -502,7 +495,7 @@ color:rgb(100, 99, 99);
     font-size:15px;
     font-weight: bold;
 }
-/* seventh............................................................. */
+/* ===================== seven section ================== */
 
 .seventh-section{
     padding:50px 0;
@@ -593,7 +586,7 @@ color:rgb(100, 99, 99);
     flex-grow: 1;
     width:30%;
 }
-/* eighth..................................................... */
+/* ==================== eight section ==================== */
 
 .eighth-section{
     padding-bottom:50px ;
@@ -607,7 +600,6 @@ row-gap: 20px;
     text-align: center;
     color:#37517e;
     font-size: 35px;
-    /* margin:20px 0; */
     position:relative;
     padding:20px 0;
     font-weight: 800;
@@ -642,7 +634,6 @@ row-gap: 20px;
 }
 .eighth-section p{
     text-align: center;
-    /* margin:60px 0; */
     color:rgb(87, 85, 85);
 }
 .eighth-section i{
@@ -714,7 +705,7 @@ row-gap: 20px;
     display:flex;
     column-gap: 20px;
 }
-/* ninth.............................................................. */
+/* ====================== ninth section =================== */
 
 .ninth-section{
     padding:50px 0;
@@ -723,7 +714,6 @@ row-gap: 20px;
 .ninth-section h2{
     text-align:center;
     color:#37517e;
-    /* margin:20px 0; */
     position:relative;
     padding:20px 0;
     font-size: 30px;
@@ -838,16 +828,13 @@ row-gap: 20px;
 .border-item{
     border-top:5px solid #47b2e4;
 }
-/* tenth............................................................. */
+/* ================== tenth section =================== */
 
 .tenth-section .container{
-    /* width:900px; */
     text-align: center;
     padding:50px 0;
-    /* margin: 0 auto; */
 }
 .tenth-section h2{
-    /* margin:50px 0; */
     color:#37517e;
     font-size: 30px;
     font-weight: 800;
@@ -891,7 +878,6 @@ row-gap: 20px;
     width:850px;
     margin: auto;
     margin-bottom: 20px;
-    /* text-align: center; */
 }
 .tenth-section p:nth-of-type(2) i{
     color:#97d4f0;
@@ -913,12 +899,10 @@ row-gap: 20px;
 .tenth-section .main-item{
     display: flex;
     flex-direction: column;
-    /* align-items: center; */
     width:200px;
     align-items: center;
     row-gap: 10px;
     margin: 30px auto;
-    /* margin:60px auto 10px; */
 }
 .tenth-section .main-item span{
     font-size: 14px;
@@ -929,7 +913,7 @@ row-gap: 20px;
     font-size:20px;
     color:#37517e;
 }
-/* eleventh....................................................... */
+/* ================== eleventh ========================== */
 
 .section-11{
     background-color:#f5f6f8;
@@ -995,7 +979,7 @@ row-gap: 20px;
     color:#97d4f0;
     padding-right:5px;
 }
-/* tweleve.................................................... */
+/* =================== tweleveth ======================= */
 
 .section-12{
     padding-top:50px;
@@ -1141,8 +1125,7 @@ row-gap: 20px;
     margin:30px  auto 0;
     
 }
-/* thirteen............................................................. */
-
+/* ======================= thirteenth ======================= */
 .section-13{
     padding:50px 0;
     margin-top:70px ;
@@ -1150,7 +1133,6 @@ row-gap: 20px;
 }
 .section-13 .container{
     width:600px;
-    /* margin:auto; */
 }
 .section-13 h4{
     color:#37517e;
@@ -1179,7 +1161,7 @@ margin:20px 0;
     border-radius:25px;
     font-size: 17px;
 }
-/* fourteen..................................................... */
+/* ====================== fourteen ========================== */
 
 .section-14 .arsha{
     display:flex;
@@ -1287,7 +1269,7 @@ margin:20px 0;
     color:white;
     background-color:#47b2e4;
 }
-/* footer......................................................... */
+/* ===================== footer ========================== */
 
 .footer{
     text-align:center;
